[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/mainMenuGui.gd" type="Script" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttonstart.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttonquit.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="MainMenu" type="Node2D"]

[node name="Gui" type="Node2D" parent="."]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Gui"]

z/z = -1
texture = ExtResource( 2 )
centered = false

[node name="start" type="MenuButton" parent="Gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 290.0
margin/right = 564.0
margin/bottom = 457.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true
items = [  ]

[node name="quit" type="MenuButton" parent="Gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 450.0
margin/right = 564.0
margin/bottom = 617.0
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 4 )
flat = true
items = [  ]

[connection signal="focus_enter" from="Gui/start" to="Gui" method="_on_start_focus_enter"]

[connection signal="mouse_enter" from="Gui/start" to="Gui" method="_on_start_mouse_enter"]

[connection signal="mouse_exit" from="Gui/start" to="Gui" method="_on_start_mouse_exit"]

[connection signal="pressed" from="Gui/start" to="Gui" method="_on_start_pressed"]

[connection signal="mouse_enter" from="Gui/quit" to="Gui" method="_on_quit_mouse_enter"]

[connection signal="mouse_exit" from="Gui/quit" to="Gui" method="_on_quit_mouse_exit"]

[connection signal="pressed" from="Gui/quit" to="Gui" method="_on_quit_pressed"]


